Fixed firefox navigation / touch behaviour, fixed tickets page bottom-padding on mobile, added header for contact page

--- a/assets/stylesheets/_tickets.scss
+++ b/assets/stylesheets/_tickets.scss
@@ -34,6 +34,7 @@
 .tickets-title {
 	font-size: 6.25vw;
 	color: $color-white;
+    height: 40%;
 
 	h2 {
 		line-height: 1.25em;
@@ -201,6 +202,7 @@
 
 	.tickets-title {
 		font-size: 1.75em;
+        height: 50%;
 
 		h2 {
 			line-height: 1.25em;
